1.7.0: Added comparator and repeater full support.